change modelmapper in passenger-service to mapstruct, edit mapservice to make him work with feign, refactor code, edit services logic