@@ -1,7 +1,6 @@
 package org.internship.task.driverservice.mappers;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.internship.task.driverservice.dto.drivers.DriverRequest;
 import org.internship.task.driverservice.dto.drivers.DriverResponse;
 import org.internship.task.driverservice.entities.Car;
@@ -16,7 +15,6 @@ public interface DriverMapper {
 
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "isDeleted", ignore = true)
-    @Mapping(target = "isInRide", ignore = true)
     @Mapping(target = "cars", ignore = true)
     Driver toEntity(DriverRequest driverRequest);
 
@@ -27,18 +25,18 @@ public interface DriverMapper {
 
     @Mapping(target = "id", ignore = true)
     @Mapping(target = "isDeleted", ignore = true)
-    @Mapping(target = "isInRide", ignore = true)
     @Mapping(target = "cars", ignore = true)
     void updateEntity(@MappingTarget Driver driver, DriverRequest driverRequest);
 
     @Named("mapCarIds")
     static List<Long> mapCarIds(List<Car> cars) {
         if (cars == null) {
-            return null;
+            return List.of();
         }
+
         return cars.stream()
                 .filter(car -> !Boolean.TRUE.equals(car.getIsDeleted()))
                 .map(Car::getId)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
